# refresher_cs_python

./: .gitignore  README.md  dev.html  genindex.html  index.html  modules.html  objects.inv  py-modindex.html  pyproject.toml  python_labs.html  search.html  searchindex.js  tests.html
.github/workflows/: ci.yaml  docs_pages.yaml  main.yml  pylint.yml
_sources/: modules.rst.txt  python_labs.rst.txt
dev/: checkio.py
docs/: conf.py  dev.rst  index.rst  tests.rst
python_labs/: __init__.py  checkio.py
tests/: test_checkio.py  test_python_labs.py
