[tool.poetry]
name = "python-labs"
version = "0.1.0"
description = ""
authors = ["Nicolas GOEMAN <nicolas.goemn@gmail.com>"]
readme = "README.md"
packages = [{include = "python_labs"}]

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]
pytest = "^7.1.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
