[tool.poetry]
name = "python-labs"
version = "0.1.0"
description = ""
authors = ["Nicolas GOEMAN <nicolas.goemn@gmail.com>"]
readme = "README.md"
packages = [{include = "python_labs"}]

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.group.dev.dependencies]
coverage = "^6.4.4"
pytest = "^7.1.3"
pytest-cov = "^3.0.0"
pylint = "^2.15.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.coverage.run]
omit = [".*", "*/site-packages/*"]
[tool.coverage.report]
fail_under = 100
