[tool.poetry]
name = "python-labs"
version = "0.1.0"
description = ""
authors = ["Nicolas GOEMAN <nicolas.goemn@gmail.com>"]
readme = "README.md"
packages = [{include = "python_labs"}]

[tool.poetry.dependencies]
python = "^3.9"
Sphinx = { version = "4.2.0", optional = true }
sphinx-rtd-theme = { version = "1.0.0", optional = true }
sphinxcontrib-napoleon = { version = "0.7", optional = true }

[tool.poetry.group.dev.dependencies]
coverage = {extras = ["toml"], version = "^6.4.4"}
pytest = "^7.1.3"
pytest-cov = "^3.0.0"
pylint = "^2.15.3"
flake8 = "^5.0.4"
black = "^22.8.0"

[tool.poetry.extras]
docs = ["Sphinx", "sphinx-rtd-theme", "sphinxcontrib-napoleon"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.coverage.run]
omit = [".*", "*/site-packages/*"]

[tool.coverage.report]
fail_under = 100

[tool.semantic_release]
version_variable = [
    "python_labs/__init__.py:__version__",
    "pyproject.toml:version"
]
branch = "main"
upload_to_pypi = false
upload_to_release = true
build_command = "pip install poetry && poetry build"
